# machines4ceps

./: .gitignore  ASM.md  INSTALL.md  LICENSE  Makefile  Makefile_ARM  Makefile_x86_64  README.md  make_machines.sh  o.txt
cloud/: start_sim.sh  start_sim_debug.sh
doc/: README.md  frames.adoc  frames.html  tutorial-assembler-version.md
eclipse/: .cproject  .project
examples/: README.md  actions_as_functions.ceps  composite_systemstates.ceps  conditionals.ceps  epsilon_transitions.ceps  events_with_payload.ceps  expressions.ceps  first.ceps  fixtures_usage_example.ceps  global_functions.ceps  guard_usage_example.ceps  hello-and-ciao-oblectamenta.ceps  hello-world-oblectamenta.ceps  ignore_unresolved_states_in_start_and_asserts.ceps  log_as_it_should_be.txt  math_functions.ceps  multiple_actions_usage_example.ceps  multiple_starts.ceps  periodic_timer.ceps  qualified_ids_in_transitions.ceps  reseting_named_timers.ceps  run_all.sh  simple_action.ceps  sm_keyboard.txt  statemachine1.ceps  statemachine_concurrent.ceps  stop_command.ceps  substatemachines_example.ceps  the_in_state_function_usage_example.ceps  threads.ceps  timer_triggered_events.ceps  vals.ceps
ideas/: README.md
import-scripts/: common.ceps
jit/: main.cpp
kmw/: Multibus.lib
src/: main.cpp
test/: abs_in_guards.ceps  channels_node_a_rawframe.ceps  channels_node_a_rawframe_canbus_loopback.ceps  channels_node_b_rawframe.ceps  channels_node_b_rawframe_canbus_loopback.ceps  compounds_changed.ceps  conditionals1.ceps  default_params_in_funcs.ceps  dispatch.ceps  distributed_native_1_node_a.ceps  distributed_native_1_node_b.ceps  distributed_raw_frame_1_message_definition.ceps  event_queue.ceps  locales_in_prints.ceps  on_enter_semantics.ceps  platform_extend_fto_and_alu.ceps  raw_frames.ceps  (+10 more)
test/protobufish/: .gitignore  CMakeLists.txt  README.md  build-tests  plugin-entrypoint.cpp  run-tests  tests.ceps
vm/test/: CMakeLists.txt  README.md  build.ceps-plugin.sh  ceps-plugin.test.ceps  plugin-entrypoint.cpp  rebuild.ceps-plugin.sh  run.ceps-plugin.sh  run_and_document_machinelanguage_feature  runfeature.sh  runfeature_gherkin.sh  runfeature_markdown.sh  runfeature_raw.sh  runfeature_verbose
(+1567 files in other folders)
